force-app/main/default/objects/OpportunityLineItem/fields/Billing_Start_Offset_Days__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Offset_Days__c</fullName>
    <description
  >Days after Opportunity.Subscription_Start_Date__c that billing for this line item begins. 0 = bill from day one; negative values are allowed for prepaid items. Used by downstream billing flows (not modeled in this org) and by ARR proration.</description>
    <inlineHelpText
  >Offset (days) from subscription start before this line bills. 0 = day one.</inlineHelpText>
    <label>Billing Start Offset (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>