force-app/main/default/objects/OpportunityLineItem/fields/Implementation_Phase__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Phase__c</fullName>
    <description
  >Which delivery phase consumes this line item (Phase 1, Phase 2, Phase 3, Ongoing). Inline picklist (project-specific labels, kept off the global GVS). Copied onto the corresponding QuoteLineItem and OrderItem via the Copy-OLI-to-QLI accelerator.</description>
    <inlineHelpText
  >Which implementation phase this line item belongs to.</inlineHelpText>
    <label>Implementation Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1</fullName>
                <default>true</default>
                <label>Phase 1</label>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>