force-app/main/default/objects/OpportunityLineItem/fields/Product_Family_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Rollup__c</fullName>
    <description
  >Formula Text mirroring Product2.Family onto the line item so reports and the Copy-OLI-to-QLI accelerator can group by family without an additional join.</description>
    <formula>TEXT(PricebookEntry.Product2.Family)</formula>
    <inlineHelpText
  >Auto-pulled from the related Product2's Family.</inlineHelpText>
    <label>Product Family (Rollup)</label>
    <type>Text</type>
</CustomField>