force-app/main/default/objects/OpportunityLineItem/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <description
  >Revenue classification for this line item (Subscription, Services, Usage, One-Time). Drives the ARR/ACV split done by the Opportunity revenue trigger and the recurring vs. one-time treatment in the OrderItem trigger.</description>
    <inlineHelpText
  >How this line item is recognized for revenue calculations.</inlineHelpText>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
                <default>true</default>
                <label>Subscription</label>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>