force-app/main/default/objects/OpportunityLineItem/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <description
  >Per-line-item support tier. Lets a deal mix tiers across products (e.g. 24x7 on core platform, Standard on add-ons). Defaults to Opportunity.Support_Tier__c on insert; can be overridden per OLI.</description>
    <inlineHelpText
  >Support tier for this line item (can differ from the Opp default).</inlineHelpText>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Support_Tier</valueSetName>
    </valueSet>
</CustomField>