force-app/main/default/objects/OpportunityLineItem/fields/Usage_Band__c.field-meta.xml
<CustomField>
    <fullName>Usage_Band__c</fullName>
    <description
  >For Revenue_Type__c = 'Usage' line items: the committed-usage tier (Low, Mid, High, Custom). Used by the Usage Overage workflow to decide which Product2 (NS-USAGE-BLOCK) row gets billed at overage.</description>
    <inlineHelpText
  >Usage tier for usage-based line items. Ignored for non-usage line items.</inlineHelpText>
    <label>Usage Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>